# Sentiment-Analysis

./: data.py  labelStudy.py  main.py  output.csv  predict.py  pyproject.toml
Dataset/: Adjust_dataset.csv  Adjust_dev_dataset.csv  Adjust_test_dataset.csv  Adjust_train_dataset.csv
saved_model/my_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
saved_model/my_model/variables/: variables.data-00000-of-00001  variables.index
