[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["wayner0628 <a901639@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_analysis"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
keras = "^2.10.0"
torch = "1.12.1"
pandas = "0.25.3"
tensorflow = "^2.10.0"
matplotlib = "2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
